--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./public/css/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+    <!--before-nav-->
+    <div class="before-nav">
+        <div class="left-contact">
+            <a href=""> <i class="fa-regular fa-envelope"></i> contact@example.com</a>
+            <p> <i class="fa-solid fa-mobile"></i> +1 5589 55488 55</p>
+        </div>
+        <div class="right-media">
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+    </div>
+    <!--nav-section-->
+    <nav>
+        <div class="left-nav">
+            <a href="">
+                <h1>Eterna</h1>
+            </a>
+        </div>
+        <div class="right-nav">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Services</a>
+            <a href="">Portfolio</a>
+            <a href="">Team</a>
+            <a href="">Pricing</a>
+            <a href="">Blog</a>
+            <label for="drop">
+                <select name="" id="drop">
+                    <optgroup>
+                        <option value="1">dropdown</option>
+                        <option value="1">dropdown1</option>
+                        <!-- <label for="inside-drob">
+                        <select name="" id="inside-drob">
+                            <optgroup>
+                        <option value="">yyy</option>
+                        </optgroup>
+                    </select>
+                    </label> -->
+                        <option value="2">dropdown2</option>
+                        <option value="3">dropdown3</option>
+                        <option value="4">dropdown4</option>
+                    </optgroup>
+                </select>
+            </label>
+
+            <a href="">Contact</a>
+        </div>
+    </nav>
+
 </body>
+
 </html>
