--- a/index.html
+++ b/index.html
@@ -132,7 +132,32 @@
             </button>
         </div>
     </section>
+   <!-- chaiame section  -->
+    <!-- section 3  -->
+     <section class="section3">
+        <div class="rigthdiv">
+       <h2> Voluptatem dignissimos provident</h2>
+       <h5> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
+       <div class="bb">
+        <i class="fa-solid fa-check-double"></i>
+        <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+       </div>
+       <div class="bb">
+        <i class="fa-solid fa-check-double"></i>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit</p>
+       </div>
+       <div class="bb">
+        <i class="fa-solid fa-check-double"></i>
+        <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</p>
+       </div>
+      <P>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</P>
+          
+        </div>
+        <div class="rightdiv">
+          <img src="./public/assets/img/about.jpg" alt="" width="100%">
+        </div>
 
+     </section>
 
 
 
