--- a/index.html
+++ b/index.html
@@ -158,6 +158,38 @@
         </div>
 
      </section>
+      <!-- section 5 -->
+       <section  class="section5">
+    <h4>Clients</h4>
+     <P> Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas</P>
+ </section>
+
+  <!-- section li kthrek  -->
+   <section class="slider">
+    <div class="slide-track">
+        <img src="./public/assets/img/clients/clients-1.webp" alt="">
+        <img src="./public/assets/img/clients/clients-2.webp" alt="">
+        <img src="./public/assets/img/clients/clients-3.webp" alt="">
+        <img src="./public/assets/img/clients/clients-4.webp" alt="">
+        <img src="./public/assets/img/clients/clients-5.webp" alt="">
+        <img src="./public/assets/img/clients/clients-6.webp" alt="">
+        <img src="./public/assets/img/clients/clients-7.webp" alt="">
+        <img src="./public/assets/img/clients/clients-8.webp" alt="">
+         <!-- duplication pour boucle infinie -->
+          <img src="./public/assets/img/clients/clients-1.webp" alt="">
+        <img src="./public/assets/img/clients/clients-2.webp" alt="">
+        <img src="./public/assets/img/clients/clients-3.webp" alt="">
+        <img src="./public/assets/img/clients/clients-4.webp" alt="">
+        <img src="./public/assets/img/clients/clients-5.webp" alt="">
+        <img src="./public/assets/img/clients/clients-6.webp" alt="">
+        <img src="./public/assets/img/clients/clients-7.webp" alt="">
+        <img src="./public/assets/img/clients/clients-8.webp" alt="">
+         
+    </div>
+   </section>
+
+
+       
 
 
 
