--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
  </section>
 
   <!-- section li kthrek  -->
-   <section class="logo-slider">
-    <div class="slider-track">
+   <section class="logos">
+    <div class="logodif">
         <img src="./public/assets/img/clients/clients-1.webp" alt="">
         <img src="./public/assets/img/clients/clients-2.webp" alt="">
         <img src="./public/assets/img/clients/clients-3.webp" alt="">
