--- a/public/pages/Portfolio.html
+++ b/public/pages/Portfolio.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" href="./public/assets/img/favicon.png">
-    <link rel="stylesheet" href="./public/css/app.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    <link rel="icon" href="../assets/img/favicon.png">
+    <link rel="stylesheet" href="../css/app.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title>Document</title>
 </head>
-
 <body>
-    <!--before-nav-->
+    
+        <!--before-nav-->
     <div class="section-befor-nav">
         <div class="before-nav">
             <div class="left-contact">
@@ -42,13 +41,13 @@
                 </a>
             </div>
             <div class="right-nav">
-                <a href="./index.html">Home</a>
-                <a href="./public/pages/about.html">About</a>
-                <a href="./public/pages/Services.html">Services</a>
-                <a href="./public/pages/Portfolio.html">Portfolio</a>
-                <a href="./public/pages/Team.html">Team</a>
-                <a href="./public/pages/Pricing.html">Pricing</a>
-                <a href="./public/pages/Blog.html">Blog</a>
+                <a href="../../index.html">Home</a>
+                <a href="../pages/about.html">About</a>
+                <a href="../pages/Services.html">Services</a>
+                <a href="../pages/Portfolio.html">Portfolio</a>
+                <a href="../pages/Team.html">Team</a>
+                <a href="../pages/Pricing.html">Pricing</a>
+                <a href="../pages/Blog.html">Blog</a>
                 <label for="drop">
                     <select name="" id="drop">
                         <optgroup>
@@ -68,80 +67,14 @@
                     </select>
                 </label>
 
-                <a href="./public/pages/Contact.html">Contact</a>
+                <a href="../pages/Contact.html">Contact</a>
             </div>
         </nav>
     </section>
+
     
-
-    <section class="first-section">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active " data-bs-interval="10000">
-                    <img src="./public/assets/img/hero-carousel/hero-carousel-1.jpg" 
-                        class="d-block w-100" alt="...">
-                    <div class="section-div-paragrapgh">
-                        <h1>Welcome to <span>Eterna</span></h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <div class="button">
-                            <button>Get Started</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./public/assets/img/hero-carousel/hero-carousel-2.jpg" class="d-block w-100" alt="...">
-                    <div class="section-div-paragrapgh">
-                        <h1>At vero eos et accusamus</h1>
-                        <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-                            aut odit
-                            aut
-                            fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis
-                            iste
-                            natus
-                            error sit voluptatem accusantium.</p>
-                        <div class="button">
-                            <button>Get Started</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./public/assets/img/hero-carousel/hero-carousel-3.jpg" class="d-block w-100" alt="...">
-                    <div class="section-div-paragrapgh">
-                        <h1>Temporibus autem quibusdam</h1>
-                        <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-                            aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                            nesciunt omnis iste natus error sit voluptatem accusantium.</p>
-                        <div class="button">
-                            <button>Get Started</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
-
-   
     <!--footer-->
+
     <footer>
         <div class="top-footer">
             <h3>Join Our Newsletter</h3>
@@ -224,56 +157,7 @@
     </footer>
 
     <div class="back-to-top">
-        <a href="./index.html"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="../../index.html"><i class="fa-solid fa-arrow-up"></i></a>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
 </body>
-
 </html>
