--- a/public/pages/Blog.html
+++ b/public/pages/Blog.html
@@ -156,7 +156,7 @@
     </footer>
 
     <div class="back-to-top">
-        <a href="../../index.html"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="../pages/Blog.html"><i class="fa-solid fa-arrow-up"></i></a>
     </div>
 </body>
 </html>
