--- a/public/pages/Portfolio.html
+++ b/public/pages/Portfolio.html
@@ -157,7 +157,7 @@
     </footer>
 
     <div class="back-to-top">
-        <a href="../../index.html"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="../pages/Portfolio.html"><i class="fa-solid fa-arrow-up"></i></a>
     </div>
 </body>
 </html>
