--- a/public/pages/Team.html
+++ b/public/pages/Team.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/img/favicon.png">
     <link rel="stylesheet" href="../css/app.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
-    
-        <!--before-nav-->
+
+    <!--before-nav-->
     <div class="section-befor-nav">
         <div class="before-nav">
             <div class="left-contact">
@@ -72,7 +74,87 @@
         </nav>
     </section>
 
-    
+    <!--team-section-1-->
+
+    <section class="first-section-contact">
+        <div>
+            <a href="../../index.html">home</a>
+            <span>/</span>
+            <p>home</p>
+        </div>
+        <div>
+            <h3>Contact</h3>
+        </div>
+    </section>
+
+    <!--team-sction-2-->
+    <section class="team-section">
+        <div class="top-section-team">
+            <div class="left-section-team">
+                <img src="../assets/img/person/person-m-7.webp" alt="">
+                <div>
+                    <h3>Walter White</h3>
+                    <p>Chief Executive Officer</p>
+                    <span class="line-color"></span>
+                    <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                    <div class="right-media">
+                        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="right-section-team">
+                <img src="../assets/img/person/person-f-8.webp" alt="">
+                <div>
+                    <h3>Sarah Jhonson</h3>
+                    <p>Product Manager</p>
+                    <span class="line-color"></span>
+                    <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+                    <div class="right-media">
+                        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bottom-section-team">
+            <div class="left-bottom-team">
+                <img src="../assets/img/person/person-m-6.webp" alt="">
+                <div>
+                    <h3>William Anderson</h3>
+                    <p>CTO</p>
+                    <span class="line-color"></span>
+                    <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
+                    <div class="right-media">
+                        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="right-bottom-team">
+                <img src="../assets/img/person/person-f-4.webp" alt="">
+                <div>
+                    <h3>Amanda Jepson</h3>
+                    <p>Accountant</p>
+                    <span class="line-color"></span>
+                    <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
+                    <div class="right-media">
+                        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
     <!--footer-->
 
     <footer>
@@ -157,7 +239,8 @@
     </footer>
 
     <div class="back-to-top">
-        <a href="../../index.html"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="../pages/Team.html"><i class="fa-solid fa-arrow-up"></i></a>
     </div>
 </body>
+
 </html>
