--- a/public/pages/Contact.html
+++ b/public/pages/Contact.html
@@ -221,7 +221,7 @@
     </footer>
 
     <div class="back-to-top">
-        <a href="../../index.html"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="../pages/Contact.html"><i class="fa-solid fa-arrow-up"></i></a>
     </div>
 </body>
 
