--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -71,7 +71,20 @@
             </div>
         </nav>
     </section>
-    
+       
+
+
+    <!-- dek l3ba li ktbyn fen nta -->
+     <section class="first-section-contact">
+        <div>
+            <a href="../../index.html">home</a>
+            <span>/</span>
+            <p>about</p>
+        </div>
+        <div>
+            <h3>about</h3>
+        </div>
+    </section>
  <!-- section li moura nav  -->
 
 <section class="section1">
