last push of our project eterna

--- a/public/pages/Services.html
+++ b/public/pages/Services.html
@@ -72,6 +72,19 @@
         </nav>
     </section>
 
+        <!--services-section-1-->
+
+    <section class="first-section-contact">
+        <div>
+            <a href="../../index.html">home</a>
+            <span>/</span>
+            <p>home</p>
+        </div>
+        <div>
+            <h3>Services</h3>
+        </div>
+    </section>
+
     <!-- html main_services chorouk -->
 <section class="media_marg">
     <section class="grid margin">
