--- a/index.html
+++ b/index.html
@@ -75,69 +75,6 @@
 
 
     <section class="first-section">
-        <!-- <div id="carouselExampleDark" class="carousel carousel-dark slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active " data-bs-interval="10000">
-                    <img src="./public/assets/img/hero-carousel/hero-carousel-1.jpg" 
-                        class="d-block w-100" alt="...">
-                    <div class="section-div-paragrapgh">
-                        <h1>Welcome to <span>Eterna</span></h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <div class="button">
-                            <button>Get Started</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./public/assets/img/hero-carousel/hero-carousel-2.jpg" class="d-block w-100" alt="...">
-                    <div class="section-div-paragrapgh">
-                        <h1>At vero eos et accusamus</h1>
-                        <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-                            aut odit
-                            aut
-                            fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis
-                            iste
-                            natus
-                            error sit voluptatem accusantium.</p>
-                        <div class="button">
-                            <button>Get Started</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./public/assets/img/hero-carousel/hero-carousel-3.jpg" class="d-block w-100" alt="...">
-                    <div class="section-div-paragrapgh">
-                        <h1>Temporibus autem quibusdam</h1>
-                        <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-                            aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                            nesciunt omnis iste natus error sit voluptatem accusantium.</p>
-                        <div class="button">
-                            <button>Get Started</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div> -->
         <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -197,7 +134,7 @@
             </button>
         </div>
     </section>
-
+    <!--button to back to top -->
     <div class="back-to-top">
         <a href="./index.html"><i class="fa-solid fa-arrow-up"></i></a>
     </div>
@@ -467,9 +404,7 @@
 
     </footer>
 
-    <div class="back-to-top">
-        <a href="./index.html"><i class="fa-solid fa-arrow-up"></i></a>
-    </div>
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
