--- a/public/pages/Team.html
+++ b/public/pages/Team.html
@@ -87,12 +87,12 @@
         </div>
     </section>
 
-    <!--team-sction-2-->
+    <!--team-section-2-->
     <section class="team-section">
-        <div class="top-section-team">
-            <div class="left-section-team">
+        <div class="team-flex">
+            <div class="section1-team flex-img-text">
                 <img src="../assets/img/person/person-m-7.webp" alt="">
-                <div>
+                <div class="flex-inside">
                     <h3>Walter White</h3>
                     <p>Chief Executive Officer</p>
                     <span class="line-color"></span>
@@ -105,9 +105,11 @@
                     </div>
                 </div>
             </div>
-            <div class="right-section-team">
+        </div>
+        <div>
+            <div class="section2-team flex-img-text">
                 <img src="../assets/img/person/person-f-8.webp" alt="">
-                <div>
+                <div class="flex-inside">
                     <h3>Sarah Jhonson</h3>
                     <p>Product Manager</p>
                     <span class="line-color"></span>
@@ -121,10 +123,10 @@
                 </div>
             </div>
         </div>
-        <div class="bottom-section-team">
-            <div class="left-bottom-team">
+        <div class="team-flex">
+            <div class="section3-team flex-img-text">
                 <img src="../assets/img/person/person-m-6.webp" alt="">
-                <div>
+                <div class="flex-inside">
                     <h3>William Anderson</h3>
                     <p>CTO</p>
                     <span class="line-color"></span>
@@ -137,9 +139,11 @@
                     </div>
                 </div>
             </div>
-            <div class="right-bottom-team">
+        </div>
+        <div class="team-flex">
+            <div class="section4-team flex-img-text">
                 <img src="../assets/img/person/person-f-4.webp" alt="">
-                <div>
+                <div class="flex-inside">
                     <h3>Amanda Jepson</h3>
                     <p>Accountant</p>
                     <span class="line-color"></span>
@@ -150,7 +154,6 @@
                         <a href=""><i class="fa-brands fa-instagram"></i></a>
                         <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -158,7 +161,7 @@
     <!--footer-->
 
     <footer>
-        <div class="top-footer">
+        <div class="section3-team">
             <h3>Join Our Newsletter</h3>
             <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
             <div class="shearch-button">
@@ -166,7 +169,7 @@
                 <button type="button" class="btn btn-success">subscribe</button>
             </div>
         </div>
-        <div class="before-buttom-footer">
+        <div class="section4-team">
             <div class="bottom-footer">
                 <div class="top-bottom-footer">
                     <div class="left-bottom-footer">
