--- a/public/pages/Team.html
+++ b/public/pages/Team.html
@@ -160,8 +160,10 @@
     </section>
     <!--footer-->
 
+  <!--footer-->
+
     <footer>
-        <div class="section3-team">
+        <div class="top-footer">
             <h3>Join Our Newsletter</h3>
             <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
             <div class="shearch-button">
@@ -169,7 +171,7 @@
                 <button type="button" class="btn btn-success">subscribe</button>
             </div>
         </div>
-        <div class="section4-team">
+        <div class="before-buttom-footer">
             <div class="bottom-footer">
                 <div class="top-bottom-footer">
                     <div class="left-bottom-footer">
@@ -242,7 +244,7 @@
     </footer>
 
     <div class="back-to-top">
-        <a href="../pages/Team.html"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="../pages/about.html"><i class="fa-solid fa-arrow-up"></i></a>
     </div>
 </body>
 
